# uniffi-dart

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rustfmt.toml  treefmt.nix
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: nix.yml  test-downstream.yml  tests.yml
fixtures/benchmarks/: Cargo.toml
fixtures/benchmarks/src/: lib.rs
fixtures/benchmarks/test/: benchmarks_test.dart
fixtures/benchmarks/tests/: mod.rs
fixtures/callbacks/src/: api.udl  lib.rs
fixtures/callbacks/test/: callbacks_test.dart
fixtures/custom_types/: Cargo.toml
fixtures/custom_types/src/: api.udl  lib.rs
fixtures/custom_types/test/: custom_types_test.dart
fixtures/dart_async/src/: lib.rs
fixtures/dart_async/test/: futures_test.dart
fixtures/dispose/src/: lib.rs
fixtures/docstring/: Cargo.toml
fixtures/docstring-proc-macro/: Cargo.toml
fixtures/docstring-proc-macro/test/: docstring_proc_macro_test.dart
fixtures/docstring-proc-macro/tests/: mod.rs
fixtures/duration_type_test/src/: lib.rs
fixtures/enum-types/src/: lib.rs
fixtures/error_types/src/: lib.rs
fixtures/hello_world/src/: lib.rs
fixtures/keywords/: Cargo.toml
fixtures/keywords/src/: lib.rs
fixtures/large-error/src/: lib.rs
fixtures/large_enum/src/: lib.rs
fixtures/metadata/: Cargo.toml
fixtures/proc-macro-no-implicit-prelude/: Cargo.toml
fixtures/proc-macro-no-implicit-prelude/src/: callback_interface.rs  lib.rs
fixtures/proc-macro-no-implicit-prelude/test/: proc_macro_no_implicit_prelude_test.dart
fixtures/proc-macro-no-implicit-prelude/tests/: mod.rs
fixtures/proc-macro/src/: callback_interface.rs  lib.rs
fixtures/proc-macro/test/: proc_macro_test.dart
fixtures/proc-macro/tests/: mod.rs
fixtures/simple-fns/src/: lib.rs
fixtures/simple-iface/src/: lib.rs
fixtures/streams_ext/src/: lib.rs
fixtures/time-types/: Cargo.toml
fixtures/time-types/src/: lib.rs
src/: build.rs  testing.rs
uniffi_dart_macro/: Cargo.toml
uniffi_dart_macro/src/: lib.rs
