[package]
name = "proc-macro-no-implicit-prelude"
version = "0.1.0"
edition = "2021"

[lib]
name = "proc_macro_no_implicit_prelude"
crate-type = ["lib", "cdylib"]

[features]
default = ["myfeature"]
myfeature = []

[dependencies]
thiserror = "1.0"
uniffi = { workspace = true, features = ["scaffolding-ffi-buffer-fns"] }

[build-dependencies]
uniffi-dart = { path = "../../", features = ["build"] }
camino = "1"

[dev-dependencies]
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }
anyhow = "1"
